--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ footer p {
   font-size: 0.9rem;
 }
 
-#image
+/* imagw.css */
 
 .card {
   transition: transform 0.3s ease, box-shadow 0.3s ease;
