--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 .navbar-custom .nav-link {
-  color: #ffffff !important;
+  color: #red !important;
   margin-left: 20px;
   position: relative;
   font-weight: 500;
@@ -25,7 +25,7 @@ body {
 }
 
 .navbar-custom .nav-link:hover {
-  color: #00bcd4 !important;
+  color: #red !important;
 }
 
 .navbar-custom .nav-link:hover::after {
